# rse-groups

./: .gitignore  LICENSE  README.rst  groups.json  groups.py  groups.toml  index.html  pyproject.toml  rse-groups.js
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: main.yml
LICENSES/: MIT.txt
