# SPDX-FileCopyrightText: © 2022 Matt Williams <matt@milliams.com>
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "groups"
version = "0.1.0"
description = ""
authors = ["Matt Williams <m.williams@society-rse.org>"]

[tool.poetry.dependencies]
python = "^3.9"
tomli = "^2.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
reuse = "^5.0.2"

[tool.poetry.scripts]
generate = 'groups:generate_geojson'
convert_old = 'groups:convert_kml_to_toml'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
